welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	if (( speed<=60 && isBirthday == false) || ( speed<=65 && isBirthday == true)) {
		return 0
	} else if ((61<=speed && speed<=80 && isBirthday == false) || ( 66<=speed<=85 && isBirthday == true))  { 
		return 1
	} else {
		return 2
	}
}
